--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="nd-pageheader">
  <div class="container">
  <p class="lead" style="font-size:30px">
-    <b><a href="https://arxiv.org/abs/">GaussianFormer: Scene as Gaussians for Vision-Based <br> 3D Semantic Occupancy Prediction</a></b>
+    <b><a href="https://arxiv.org/abs/2405.17429">GaussianFormer: Scene as Gaussians for Vision-Based <br> 3D Semantic Occupancy Prediction</a></b>
   <address style="font-size: 110%;">
     <nobr><a href="https://scholar.google.com/citations?&user=LKVgsk4AAAAJ">Yuanhui Huang</a>,</nobr>
     <nobr><a href="https://wzzheng.net/">Wenzhao Zheng</a><sup>†</sup>,</nobr>
@@ -79,7 +79,7 @@
    <!-- <div style="font-size: 170%;">CVPR 2023</div> -->
   <address style="font-size: 120%;">
 	 <!-- <br> -->
-  [<a href="https://arxiv.org/pdf/2302.07817"><b>Paper (Arxiv)</b></a>]&nbsp;&nbsp;&nbsp;&nbsp;
+  [<a href="https://arxiv.org/pdf/2405.17429"><b>Paper (Arxiv)</b></a>]&nbsp;&nbsp;&nbsp;&nbsp;
   <!-- [<a href="https://www.youtube.com/">Video(Youtube)</a>]&nbsp;&nbsp;&nbsp;&nbsp; -->
   [<a href="https://github.com/huang-yh/GaussianFormer"><b>Code (GitHub)</b></a>]&nbsp;&nbsp;&nbsp;&nbsp;
   <!-- [<a href="https://zhuanlan.zhihu.com">Post(Zhihu)</a>] -->
@@ -222,7 +222,7 @@ Our GussianFormer not only achieves reasonable allocation of resources, but also
   @article{huang2024gaussian,
     title={GaussianFormer: Scene as Gaussians for Vision-Based 3D Semantic Occupancy Prediction},
     author={Huang, Yuanhui and Zheng, Wenzhao and Zhang, Yunpeng and Zhou, Jie and Lu, Jiwen},
-    journal={arXiv preprint arXiv:},
+    journal={arXiv preprint arXiv:2405.17429},
     year={2023}
 }
 </pre>
